         patterns (e.g. char[MMM d, yyyy]). The others uses similar
         but shortened patterns (e.g. numeric[YMDhmsS], which is equivalent
         to "yyyyMMddhhmmssSSS" SimpleDateFormat pattern).
         (Oleg Nitz <on@ibis.odessa.ua>)

JDO:     Fixes to handling of dependent objects create/delete/modify during
         transaction commit. (Oleg Nitz <on@ibis.odessa.ua>)

XML:     Identity field will now use XML name provided in mapping file.

XML:     Marshaller will now accept both primitive and non-primitive types and apply the
         proper conversion; no dropped in convertor used, so Date/byte conversion should
         work as expected; added test case for type handling of XML. (Bug reported by
         Eitan Suez <eitan@uptodata.com>)

Misc:    Fixed security bug when running as an Applet. (Reported by Remus Pereni
         <remus@nolimits.ro>).


Version 0.8.6  May 24, 2000
---------------------------

XML:     Added support in the Marshaller to specify whether or not to marshal
         as an XML document, or just an XML fragment (default). Currently
         the only difference is the XML declaration is printed when marshalling
         as a document. I will add support for specifying the DOCTYPE. Of course
         since a SAX 1.0 DocumentHandler doesn't allow this, DOCTYPE and
         XML declarations will only be printed when a Writer is used.

XML:     Added support in the unmarshaller for better inheritence checking.
         If a FieldDescriptor is not found for an element, an attempt to
         obtain ClassDescriptor will occur for the given element. If found,
         another check will be performed to find a FieldDescriptor that
         describes a field which is a superclass of type described by the
         class descriptor. (see src/tests/xml/Inheritence.java)

JDO:     Added support for paramaterized type convertors. Currently supported is boolean